--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mapbox/tile-cover": "^3.0.2",
     "@mapbox/timespace": "^2.0.4",
-    "geo-tz": "^7.0.2"
+    "geo-tz": "^7.0.2",
+    "unsplash-js": "^7.0.15"
   }
 }
